opam-version: "1.2"
version: "1.0"
maintainer: "jnfoster@cs.cornell.edu"
authors: ["Nate Foster"]
homepage: "https://github.com/jnfoster/brx"
bug-reports: "https://github.com/jnfoster/brx/issues"
dev-repo: "https://github.com/jnfoster/brx/"
license: "None"
build: [
  ["dune" "build" "--root" "." "-j" jobs "@install"]
]
